--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https//ssbu-2020.github.io/smash-generator"
+  "homepage": "https://ssbu-2020.github.io/smash-generator"
 }
